src/test/ui/never_type/never-assign-wrong-type.stderr
error[E0308]: mismatched types
  --> $DIR/never-assign-wrong-type.rs:6:16
   |
LL |     let x: ! = "hello";
   |                ^^^^^^^ expected `!`, found `&str`
   |
   = note:   expected type `!`
           found reference `&'static str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
